--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": ".i",
-  "version": "0.1.2"
+  "name": "theme-doti",
+  "version": "0.1.3",
+  "description": "シンプルで洗練されたFC2ブログ用の共有テンプレートです。",
   "author": {
     "name": "moi",
     "twitter": "@moi_fc2"
-  }
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ]
 }
